# oeqa-reporter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTROL.md
oeqa_reporter/: __main__.py  _fonts.py  report.py  runner.py
tests/: test_report.py
tests/fixtures/: testresults.json
