[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oeqa-reporter"
version = "0.1.0"
description = "Run a Yocto oeqa testexport bundle and render a video + log evidence report"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
oeqa-reporter = "oeqa_reporter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oeqa_reporter*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
